--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.546.0",
     "next": "16.0.0",
+    "openai": "^6.6.0",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
